kubernetes/testnet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testnet-casperholders-api
  name: testnet-casperholders-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testnet-casperholders-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: testnet-casperholders-api
        name: testnet-casperholders-api
    spec:
      containers:
          image: killianh/casperholders:testnet-api
          name: testnet-casperholders-api
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
