kubernetes/testnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-testnet-casperholders-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: testnet-casperholders-api
status:
  loadBalancer: {}
