kubernetes/testnet/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gzip-compress
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-testnet-casperholders-tls
spec:
  entryPoints:
    - secure
  routes:
    - match: Host(`api.testnet.casperholders.io`)
      middlewares:
        - name: gzip-compress
      kind: Rule
      services:
        - name: api-testnet-casperholders-service
          port: 80
  tls:
    secretName: api-testnet-casperholders-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-testnet-casperholders-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.testnet.casperholders.io`)
      middlewares:
        - name: https-only
      kind: Rule
      services:
        - name: api-testnet-casperholders-service
          port: 80
